--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
-@import "./_reset.css";
+@import url("./_reset.css");
 
 :root {
   --white: #eceff4;
